@@ -7,7 +7,7 @@ style sheets do not work on cached blocks. I think this is a long-standing core 
 		<h2 style="clear:both; margin-bottom:1em;"><a href="<{$start.itemUrl}>"><{$start.title}></a></h2>
 		<{if $start.subtitle}><h3 style="clear:both; margin-bottom:1em;"><{$start.subtitle}></h3><{/if}>
 		<{if $start.updated}>
-			<div class="itemCmsInfo">
+			<div class="itemCmsInfoUpdated">
 					<span class="cms_updated"><{$smarty.const._CO_CMS_START_UPDATED}>: <{$start.date}></span>
 			</div>
 		<{/if}>
