@@ -51,7 +51,6 @@
 				});
 			</script>
 			<{/if}>
-			<div style="clear:both;padding: 0 0 10px 0;"></div>
 			<{if $cms_post_comment}><div class="itemCmsInfoComment"><{$cms_start.start_comment_info}></div><{/if}>
 		</div>
 		<{if $cms_start.counter || $cms_start.updated}>
